--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
         "handle": "google-shopping-feed",
         "hasCpSettings": true,
         "hasCpSection": false,
+        "components": {
+            "elements": "studioespresso\\googleshoppingfeed\\services\\ElementsService"
+        },
         "class": "studioespresso\\googleshoppingfeed\\GoogleShoppingFeed"
     }
 }
