--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "authors": [
         {
             "name": "Studio Espresso",
-            "homepage": "https://studioespresso.co/en"
+            "homepage": "https://studioespresso.dev"
         }
     ],
     "require": {
